--- a/example/index.html
+++ b/example/index.html
@@ -3,25 +3,52 @@
   <head>
     <meta charset="utf-8">
     <title>isKeyDown test</title>
+
+    <style>
+      html, body, div { margin: 0; padding: 0; font-family: Montserrat, Helvetica, Arial, sans-serif;}
+      h1 {
+        margin: 0;
+        padding: 1rem;
+      }
+      .test {
+        margin: 0;
+        padding: 1rem;
+        background-color: #CCC;
+      }
+      .test:nth-child(2n) {
+        background-color: #DDD;
+      }
+    </style>
   </head>
   <body>
     <main>
-      <h1>keyIsDown</h1>
+      <h1>pressed.js</h1>
 
-      <h2>Currently pressed keys:</h2>
-      <p id="pressedKeyList"></p>
+      <div class="test">
+        <h2>All currently pressed keys:</h2>
+        <p id="pressedKeyList"></p>
+        <p id="pressedKeyCodeList"></p>
+      </div>
 
-      <h2>Appears when Shift + L are pressed together:</h2>
-      <p id="all"></p>
+      <div class="test">
+        <h2>Detects when Shift + L are pressed together:</h2>
+        <p id="every"></p>
+      </div>
 
-      <h2>Detects any vowel (A, E, I, O, U):</h2>
-      <p id="any"></p>
+      <div class="test">
+        <h2>Detects any vowel (A, E, I, O, U):</h2>
+        <p id="some"></p>
+      </div>
 
-      <h2>Detects only left command / windows key:</h2>
-      <p id="leftCommand"></p>
+      <div class="test">
+        <h2>Detects only left command / windows key:</h2>
+        <p id="leftCommand"></p>
+      </div>
 
-      <h2>Detects either (left or right) command / windows key:</h2>
-      <p id="anyCommand"></p>
+      <div class="test">
+        <h2>Detects either (left or right) command / windows key:</h2>
+        <p id="anyCommand"></p>
+      </div>
     </main>
     <script src="example.js"></script>
   </body>
