--- a/example/index.html
+++ b/example/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>isKeyDown test</title>
+    <title>pressed.js Example</title>
 
     <style>
       html, body, div { margin: 0; padding: 0; font-family: Montserrat, Helvetica, Arial, sans-serif;}
