Added mouse buttons

--- a/example/index.html
+++ b/example/index.html
@@ -49,6 +49,13 @@
         <h2>Detects either (left or right) command / windows key:</h2>
         <p id="anyCommand"></p>
       </div>
+
+      <div class="test">
+        <h2>Mouse buttons:</h2>
+        <p id="mouse0"></p>
+        <p id="mouse2"></p>
+        <p id="anyMouse"></p>
+      </div>
     </main>
     <script src="example.js"></script>
   </body>
